--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">LabW4</string>
+    <string name="app_name">ЛР4</string>
+    <string name="audio">Аудіо</string>
+    <string name="video">Відео</string>
+    <string name="stop">СТОП</string>
+    <string name="play">СТАРТ</string>
+    <string name="pause">ПАУЗА</string>
 </resources>
